# qdrant-notebooks

./: pyproject.toml  qdrant_collections_1.ipynb
qdrant-collections/: 1.collections.ipynb  2_Points.ipynb  qdrant_collections_1.ipynb
qdrant-quickstart/: helloqdrant.ipynb
qdrant-vectors/: 2.Points.ipynb  qdrant_vector_list.ipynb  qdrant_vector_list_colab.ipynb
retrieval-optimization/: Lesson_1-Copy1.ipynb  README.md
retrieval-optimization/lesson_2/: Lesson_2.ipynb
retrieval-optimization/lesson_3/: Lesson_3.ipynb
retrieval-optimization/lesson_4/: Lesson_4.ipynb  requirements.txt
retrieval-optimization/lesson_5/: Lesson_5.ipynb
retrieval-optimization/lesson_6/: Lesson_6.ipynb
